// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReleaseCommits organization release commits 1`] = `
<withApi(ReleaseCommits)
  location={Object {}}
  params={
    Object {
      "orgId": "123",
      "version": "10.0",
    }
  }
>
  <ReleaseCommits
    api={
      Client {
        "_chain": [Function],
        "_wrapRequest": [Function],
        "bulkUpdate": [Function],
        "handleRequestError": [Function],
        "hasProjectBeenRenamed": [Function],
      }
    }
    location={Object {}}
    params={
      Object {
        "orgId": "123",
        "version": "10.0",
      }
    }
  >
    <div>
      <div
        className="heading"
      />
      <Panel
        key="example/repo-name"
      >
        <Component
          className="css-1xbmlp0-Panel e119nu470"
        >
          <div
            className="css-1xbmlp0-Panel e119nu470"
          >
            <PanelHeader>
              <div
                className="css-j2tnti-PanelHeader en8g1d30"
              >
                example/repo-name
              </div>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <EmotionCssPropInternal
                __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
                __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
                css={
                  Object {
                    "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRleHQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdZIiwiZmlsZSI6InRleHQudHN4Iiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5jb25zdCB0ZXh0U3R5bGVzID0gKCkgPT4ge1xuICByZXR1cm4gY3NzYFxuICAgIC8qIHN0eWxlbGludC1kaXNhYmxlIG5vLWRlc2NlbmRpbmctc3BlY2lmaWNpdHkgKi9cbiAgICBoMSxcbiAgICBoMixcbiAgICBoMyxcbiAgICBoNCxcbiAgICBoNSxcbiAgICBoNixcbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIHRhYmxlLFxuICAgIGRsLFxuICAgIGJsb2NrcXVvdGUsXG4gICAgZm9ybSxcbiAgICBwcmUsXG4gICAgLmF1dG8tc2VsZWN0LXRleHQsXG4gICAgLnNlY3Rpb24sXG4gICAgW2NsYXNzXj0naGlnaGxpZ2h0LSddIHtcbiAgICAgIG1hcmdpbi1ib3R0b206IDIwcHg7XG5cbiAgICAgICY6bGFzdC1jaGlsZCB7XG4gICAgICAgIG1hcmdpbi1ib3R0b206IDA7XG4gICAgICB9XG4gICAgfVxuXG4gICAgaDEsXG4gICAgaDIsXG4gICAgaDMsXG4gICAgaDQsXG4gICAgaDUsXG4gICAgaDYge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuMjtcbiAgICB9XG5cbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIGJsb2NrcXVvdGUge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuNTtcbiAgICB9XG5cbiAgICBoMSB7XG4gICAgICBmb250LXNpemU6IDJlbTtcbiAgICB9XG5cbiAgICBoMiB7XG4gICAgICBmb250LXNpemU6IDEuNzVlbTtcbiAgICB9XG5cbiAgICBoMyB7XG4gICAgICBmb250LXNpemU6IDEuNWVtO1xuICAgIH1cblxuICAgIGg0IHtcbiAgICAgIGZvbnQtc2l6ZTogMS4yNWVtO1xuICAgIH1cblxuICAgIGg1IHtcbiAgICAgIGZvbnQtc2l6ZTogMWVtO1xuICAgIH1cblxuICAgIHByZSB7XG4gICAgICB3b3JkLWJyZWFrOiBicmVhay1hbGw7XG4gICAgICB3aGl0ZS1zcGFjZTogcHJlLXdyYXA7XG4gICAgfVxuICAgIC8qIHN0eWxlbGludC1lbmFibGUgKi9cbiAgYDtcbn07XG5cbmV4cG9ydCBkZWZhdWx0IHRleHRTdHlsZXM7XG4iXX0= */",
                    "name": "7uw193-PanelBody",
                    "next": undefined,
                    "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhbmVsQm9keS5qc3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBbUJNIiwiZmlsZSI6InBhbmVsQm9keS5qc3giLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQge2Nzc30gZnJvbSAnQGVtb3Rpb24vY29yZSc7XG5pbXBvcnQge0ZsZXh9IGZyb20gJ0ByZWJhc3MvZ3JpZC9lbW90aW9uJztcbmltcG9ydCBQcm9wVHlwZXMgZnJvbSAncHJvcC10eXBlcyc7XG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnO1xuXG5pbXBvcnQgc3BhY2UgZnJvbSAnYXBwL3N0eWxlcy9zcGFjZSc7XG5pbXBvcnQgdGV4dFN0eWxlcyBmcm9tICdhcHAvc3R5bGVzL3RleHQnO1xuXG5jb25zdCBQYW5lbEJvZHkgPSAoe2Rpc2FibGVQYWRkaW5nLCBmbGV4LCBkaXJlY3Rpb24sIC4uLnByb3BzfSkgPT4ge1xuICBjb25zdCBwYWRkaW5nID0gIWRpc2FibGVQYWRkaW5nXG4gICAgPyBjc3NgXG4gICAgICAgIHBhZGRpbmc6ICR7c3BhY2UoMil9O1xuICAgICAgYFxuICAgIDogJyc7XG4gIGNvbnN0IGZsZXhEaXJlY3Rpb24gPSBmbGV4ID8gZGlyZWN0aW9uIDogdW5kZWZpbmVkO1xuICBjb25zdCBDb21wID0gZmxleCA/IEZsZXggOiAnZGl2JztcblxuICByZXR1cm4gKFxuICAgIDxDb21wXG4gICAgICBjc3M9e1t0ZXh0U3R5bGVzKHByb3BzKSwgcGFkZGluZ119XG4gICAgICB7Li4ucHJvcHN9XG4gICAgICB7Li4uKGZsZXhEaXJlY3Rpb24gPyB7ZmxleERpcmVjdGlvbn0gOiBudWxsKX1cbiAgICAvPlxuICApO1xufTtcblxuUGFuZWxCb2R5LnByb3BUeXBlcyA9IHtcbiAgZmxleDogUHJvcFR5cGVzLmJvb2wsXG4gIGRpcmVjdGlvbjogUHJvcFR5cGVzLnN0cmluZyxcbiAgZGlzYWJsZVBhZGRpbmc6IFByb3BUeXBlcy5ib29sLFxufTtcblxuUGFuZWxCb2R5LmRlZmF1bHRQcm9wcyA9IHtcbiAgZmxleDogZmFsc2UsXG4gIGRpcmVjdGlvbjogJ2NvbHVtbicsXG4gIGRpc2FibGVQYWRkaW5nOiB0cnVlLFxufTtcblxuZXhwb3J0IGRlZmF1bHQgUGFuZWxCb2R5O1xuIl19 */",
                    "toString": [Function],
                  }
                }
              >
                <div
                  className="css-7uw193-PanelBody"
                >
                  <Styled(CommitRow)
                    commit={
                      Object {
                        "author": Object {
                          "avatar": Object {
                            "avatarType": "letter_avatar",
                            "avatarUuid": null,
                          },
                          "avatarUrl": "https://example.com/avatar.png",
                          "dateJoined": "2018-02-26T23:57:43.766Z",
                          "email": "example@sentry.io",
                          "emails": Array [
                            Object {
                              "email": "example@sentry.io",
                              "id": "231605",
                              "is_verified": true,
                            },
                          ],
                          "has2fa": false,
                          "hasPasswordAuth": true,
                          "id": "224288",
                          "isActive": true,
                          "isManaged": false,
                          "isSuperuser": true,
                          "lastActive": "2018-11-30T21:25:15.222Z",
                          "lastLogin": "2018-11-30T21:18:09.812Z",
                          "name": "Foo Bar",
                          "username": "example@sentry.io",
                        },
                        "dateCreated": "2018-11-30T18:46:31Z",
                        "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                        "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                        "repository": Object {
                          "externalSlug": "example/repo-name",
                          "id": "4",
                          "name": "example/repo-name",
                          "provider": "github",
                          "status": "active",
                          "url": "https://github.com/example/repo-name",
                        },
                      }
                    }
                    key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                  >
                    <CommitRow
                      className="css-zcxndt eyce8w27"
                      commit={
                        Object {
                          "author": Object {
                            "avatar": Object {
                              "avatarType": "letter_avatar",
                              "avatarUuid": null,
                            },
                            "avatarUrl": "https://example.com/avatar.png",
                            "dateJoined": "2018-02-26T23:57:43.766Z",
                            "email": "example@sentry.io",
                            "emails": Array [
                              Object {
                                "email": "example@sentry.io",
                                "id": "231605",
                                "is_verified": true,
                              },
                            ],
                            "has2fa": false,
                            "hasPasswordAuth": true,
                            "id": "224288",
                            "isActive": true,
                            "isManaged": false,
                            "isSuperuser": true,
                            "lastActive": "2018-11-30T21:25:15.222Z",
                            "lastLogin": "2018-11-30T21:18:09.812Z",
                            "name": "Foo Bar",
                            "username": "example@sentry.io",
                          },
                          "dateCreated": "2018-11-30T18:46:31Z",
                          "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                          "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                          "repository": Object {
                            "externalSlug": "example/repo-name",
                            "id": "4",
                            "name": "example/repo-name",
                            "provider": "github",
                            "status": "active",
                            "url": "https://github.com/example/repo-name",
                          },
                        }
                      }
                    >
                      <PanelItem
                        className="css-zcxndt eyce8w27"
                        key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                        p={2}
                      >
                        <div
                          className="eyce8w27 css-5fqmc7-PanelItem eo8n7lk0"
                        >
                          <AvatarWrapper>
                            <div
                              className="css-1h4eyme-AvatarWrapper eyce8w20"
                            >
                              <UserAvatar
                                gravatar={false}
                                size={36}
                                user={
                                  Object {
                                    "avatar": Object {
                                      "avatarType": "letter_avatar",
                                      "avatarUuid": null,
                                    },
                                    "avatarUrl": "https://example.com/avatar.png",
                                    "dateJoined": "2018-02-26T23:57:43.766Z",
                                    "email": "example@sentry.io",
                                    "emails": Array [
                                      Object {
                                        "email": "example@sentry.io",
                                        "id": "231605",
                                        "is_verified": true,
                                      },
                                    ],
                                    "has2fa": false,
                                    "hasPasswordAuth": true,
                                    "id": "224288",
                                    "isActive": true,
                                    "isManaged": false,
                                    "isSuperuser": true,
                                    "lastActive": "2018-11-30T21:25:15.222Z",
                                    "lastLogin": "2018-11-30T21:18:09.812Z",
                                    "name": "Foo Bar",
                                    "username": "example@sentry.io",
                                  }
                                }
                              >
                                <BaseAvatar
                                  gravatarId="example@sentry.io"
                                  hasTooltip={false}
                                  letterId="example@sentry.io"
                                  round={true}
                                  size={36}
                                  style={Object {}}
                                  title="Foo Bar"
                                  tooltip="Foo Bar (example@sentry.io)"
                                  type="letter_avatar"
                                  uploadId=""
                                  uploadPath="avatar"
                                >
                                  <Tooltip
                                    containerDisplayMode="inline-block"
                                    disabled={true}
                                    position="top"
                                    title="Foo Bar (example@sentry.io)"
                                  >
                                    <StyledBaseAvatar
                                      className="avatar"
                                      loaded={true}
                                      round={true}
                                      style={
                                        Object {
                                          "height": "36px",
                                          "width": "36px",
                                        }
                                      }
                                    >
                                      <span
                                        className="avatar css-1mqfg1n-StyledBaseAvatar e147uwb0"
                                        style={
                                          Object {
                                            "height": "36px",
                                            "width": "36px",
                                          }
                                        }
                                      >
                                        <LetterAvatar
                                          displayName="Foo Bar"
                                          identifier="example@sentry.io"
                                          round={true}
                                        >
                                          <Component
                                            className="css-z7ffmo-LetterAvatar e12lgfev0"
                                            displayName="Foo Bar"
                                            identifier="example@sentry.io"
                                            round={true}
                                          >
                                            <svg
                                              className="css-z7ffmo-LetterAvatar e12lgfev0"
                                              viewBox="0 0 120 120"
                                            >
                                              <rect
                                                fill="#847a8c"
                                                height="120"
                                                rx="15"
                                                ry="15"
                                                width="120"
                                                x="0"
                                                y="0"
                                              />
                                              <text
                                                fill="#FFFFFF"
                                                fontSize="65"
                                                style={
                                                  Object {
                                                    "dominantBaseline": "central",
                                                  }
                                                }
                                                textAnchor="middle"
                                                x="50%"
                                                y="50%"
                                              >
                                                FB
                                              </text>
                                            </svg>
                                          </Component>
                                        </LetterAvatar>
                                      </span>
                                    </StyledBaseAvatar>
                                  </Tooltip>
                                </BaseAvatar>
                              </UserAvatar>
                            </div>
                          </AvatarWrapper>
                          <CommitMessage>
                            <div
                              className="css-bjh831-CommitMessage eyce8w24"
                            >
                              <Message>
                                <div
                                  className="css-mw9uve-TextOverflow-Message eyce8w25"
                                >
                                  (improve) Add Links to Spike-Protection Email (#2408)
                                </div>
                              </Message>
                              <Meta>
                                <div
                                  className="css-1sv2dlr-TextOverflow-Meta eyce8w26"
                                >
                                  <span
                                    key="4"
                                  >
                                    <strong
                                      key="0"
                                    >
                                      Foo Bar
                                    </strong>
                                    <span
                                      key="1"
                                    >
                                       committed 
                                    </span>
                                    <TimeSince
                                      date="2018-11-30T18:46:31Z"
                                      key="2"
                                      suffix="ago"
                                    >
                                      <time
                                        date="2018-11-30T18:46:31Z"
                                        dateTime="2018-11-30T18:46:31.000Z"
                                        suffix="ago"
                                        title="November 30, 2018 6:46 PM UTC"
                                      >
                                        in a year
                                      </time>
                                    </TimeSince>
                                  </span>
                                </div>
                              </Meta>
                            </div>
                          </CommitMessage>
                          <div>
                            <CommitLink
                              commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                              repository={
                                Object {
                                  "externalSlug": "example/repo-name",
                                  "id": "4",
                                  "name": "example/repo-name",
                                  "provider": "github",
                                  "status": "active",
                                  "url": "https://github.com/example/repo-name",
                                }
                              }
                            >
                              <span>
                                f7f395d
                              </span>
                            </CommitLink>
                          </div>
                        </div>
                      </PanelItem>
                    </CommitRow>
                  </Styled(CommitRow)>
                </div>
              </EmotionCssPropInternal>
            </PanelBody>
          </div>
        </Component>
      </Panel>
    </div>
  </ReleaseCommits>
</withApi(ReleaseCommits)>
`;

exports[`ReleaseCommits project release commits 1`] = `
<withApi(ReleaseCommits)
  location={Object {}}
  params={
    Object {
      "orgId": "123",
      "projectId": "456",
      "version": "10.0",
    }
  }
>
  <ReleaseCommits
    api={
      Client {
        "_chain": [Function],
        "_wrapRequest": [Function],
        "bulkUpdate": [Function],
        "handleRequestError": [Function],
        "hasProjectBeenRenamed": [Function],
      }
    }
    location={Object {}}
    params={
      Object {
        "orgId": "123",
        "projectId": "456",
        "version": "10.0",
      }
    }
  >
    <div>
      <div
        className="heading"
      />
      <Panel
        key="example/repo-name"
      >
        <Component
          className="css-1xbmlp0-Panel e119nu470"
        >
          <div
            className="css-1xbmlp0-Panel e119nu470"
          >
            <PanelHeader>
              <div
                className="css-j2tnti-PanelHeader en8g1d30"
              >
                example/repo-name
              </div>
            </PanelHeader>
            <PanelBody
              direction="column"
              disablePadding={true}
              flex={false}
            >
              <EmotionCssPropInternal
                __EMOTION_LABEL_PLEASE_DO_NOT_USE__="PanelBody"
                __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
                css={
                  Object {
                    "map": "/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInRleHQudHN4Il0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUdZIiwiZmlsZSI6InRleHQudHN4Iiwic291cmNlc0NvbnRlbnQiOlsiaW1wb3J0IHtjc3N9IGZyb20gJ0BlbW90aW9uL2NvcmUnO1xuXG5jb25zdCB0ZXh0U3R5bGVzID0gKCkgPT4ge1xuICByZXR1cm4gY3NzYFxuICAgIC8qIHN0eWxlbGludC1kaXNhYmxlIG5vLWRlc2NlbmRpbmctc3BlY2lmaWNpdHkgKi9cbiAgICBoMSxcbiAgICBoMixcbiAgICBoMyxcbiAgICBoNCxcbiAgICBoNSxcbiAgICBoNixcbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIHRhYmxlLFxuICAgIGRsLFxuICAgIGJsb2NrcXVvdGUsXG4gICAgZm9ybSxcbiAgICBwcmUsXG4gICAgLmF1dG8tc2VsZWN0LXRleHQsXG4gICAgLnNlY3Rpb24sXG4gICAgW2NsYXNzXj0naGlnaGxpZ2h0LSddIHtcbiAgICAgIG1hcmdpbi1ib3R0b206IDIwcHg7XG5cbiAgICAgICY6bGFzdC1jaGlsZCB7XG4gICAgICAgIG1hcmdpbi1ib3R0b206IDA7XG4gICAgICB9XG4gICAgfVxuXG4gICAgaDEsXG4gICAgaDIsXG4gICAgaDMsXG4gICAgaDQsXG4gICAgaDUsXG4gICAgaDYge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuMjtcbiAgICB9XG5cbiAgICBwLFxuICAgIHVsLFxuICAgIG9sLFxuICAgIGJsb2NrcXVvdGUge1xuICAgICAgbGluZS1oZWlnaHQ6IDEuNTtcbiAgICB9XG5cbiAgICBoMSB7XG4gICAgICBmb250LXNpemU6IDJlbTtcbiAgICB9XG5cbiAgICBoMiB7XG4gICAgICBmb250LXNpemU6IDEuNzVlbTtcbiAgICB9XG5cbiAgICBoMyB7XG4gICAgICBmb250LXNpemU6IDEuNWVtO1xuICAgIH1cblxuICAgIGg0IHtcbiAgICAgIGZvbnQtc2l6ZTogMS4yNWVtO1xuICAgIH1cblxuICAgIGg1IHtcbiAgICAgIGZvbnQtc2l6ZTogMWVtO1xuICAgIH1cblxuICAgIHByZSB7XG4gICAgICB3b3JkLWJyZWFrOiBicmVhay1hbGw7XG4gICAgICB3aGl0ZS1zcGFjZTogcHJlLXdyYXA7XG4gICAgfVxuICAgIC8qIHN0eWxlbGludC1lbmFibGUgKi9cbiAgYDtcbn07XG5cbmV4cG9ydCBkZWZhdWx0IHRleHRTdHlsZXM7XG4iXX0= */",
                    "name": "7uw193-PanelBody",
                    "next": undefined,
                    "styles": "h1,h2,h3,h4,h5,h6,p,ul,ol,table,dl,blockquote,form,pre,.auto-select-text,.section,[class^='highlight-']{margin-bottom:20px;&:last-child{margin-bottom:0;}}h1,h2,h3,h4,h5,h6{line-height:1.2;}p,ul,ol,blockquote{line-height:1.5;}h1{font-size:2em;}h2{font-size:1.75em;}h3{font-size:1.5em;}h4{font-size:1.25em;}h5{font-size:1em;}pre{word-break:break-all;white-space:pre-wrap;};;label:PanelBody;/*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhbmVsQm9keS5qc3giXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IkFBbUJNIiwiZmlsZSI6InBhbmVsQm9keS5qc3giLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQge2Nzc30gZnJvbSAnQGVtb3Rpb24vY29yZSc7XG5pbXBvcnQge0ZsZXh9IGZyb20gJ0ByZWJhc3MvZ3JpZC9lbW90aW9uJztcbmltcG9ydCBQcm9wVHlwZXMgZnJvbSAncHJvcC10eXBlcyc7XG5pbXBvcnQgUmVhY3QgZnJvbSAncmVhY3QnO1xuXG5pbXBvcnQgc3BhY2UgZnJvbSAnYXBwL3N0eWxlcy9zcGFjZSc7XG5pbXBvcnQgdGV4dFN0eWxlcyBmcm9tICdhcHAvc3R5bGVzL3RleHQnO1xuXG5jb25zdCBQYW5lbEJvZHkgPSAoe2Rpc2FibGVQYWRkaW5nLCBmbGV4LCBkaXJlY3Rpb24sIC4uLnByb3BzfSkgPT4ge1xuICBjb25zdCBwYWRkaW5nID0gIWRpc2FibGVQYWRkaW5nXG4gICAgPyBjc3NgXG4gICAgICAgIHBhZGRpbmc6ICR7c3BhY2UoMil9O1xuICAgICAgYFxuICAgIDogJyc7XG4gIGNvbnN0IGZsZXhEaXJlY3Rpb24gPSBmbGV4ID8gZGlyZWN0aW9uIDogdW5kZWZpbmVkO1xuICBjb25zdCBDb21wID0gZmxleCA/IEZsZXggOiAnZGl2JztcblxuICByZXR1cm4gKFxuICAgIDxDb21wXG4gICAgICBjc3M9e1t0ZXh0U3R5bGVzKHByb3BzKSwgcGFkZGluZ119XG4gICAgICB7Li4ucHJvcHN9XG4gICAgICB7Li4uKGZsZXhEaXJlY3Rpb24gPyB7ZmxleERpcmVjdGlvbn0gOiBudWxsKX1cbiAgICAvPlxuICApO1xufTtcblxuUGFuZWxCb2R5LnByb3BUeXBlcyA9IHtcbiAgZmxleDogUHJvcFR5cGVzLmJvb2wsXG4gIGRpcmVjdGlvbjogUHJvcFR5cGVzLnN0cmluZyxcbiAgZGlzYWJsZVBhZGRpbmc6IFByb3BUeXBlcy5ib29sLFxufTtcblxuUGFuZWxCb2R5LmRlZmF1bHRQcm9wcyA9IHtcbiAgZmxleDogZmFsc2UsXG4gIGRpcmVjdGlvbjogJ2NvbHVtbicsXG4gIGRpc2FibGVQYWRkaW5nOiB0cnVlLFxufTtcblxuZXhwb3J0IGRlZmF1bHQgUGFuZWxCb2R5O1xuIl19 */",
                    "toString": [Function],
                  }
                }
              >
                <div
                  className="css-7uw193-PanelBody"
                >
                  <Styled(CommitRow)
                    commit={
                      Object {
                        "author": Object {
                          "avatar": Object {
                            "avatarType": "letter_avatar",
                            "avatarUuid": null,
                          },
                          "avatarUrl": "https://example.com/avatar.png",
                          "dateJoined": "2018-02-26T23:57:43.766Z",
                          "email": "example@sentry.io",
                          "emails": Array [
                            Object {
                              "email": "example@sentry.io",
                              "id": "231605",
                              "is_verified": true,
                            },
                          ],
                          "has2fa": false,
                          "hasPasswordAuth": true,
                          "id": "224288",
                          "isActive": true,
                          "isManaged": false,
                          "isSuperuser": true,
                          "lastActive": "2018-11-30T21:25:15.222Z",
                          "lastLogin": "2018-11-30T21:18:09.812Z",
                          "name": "Foo Bar",
                          "username": "example@sentry.io",
                        },
                        "dateCreated": "2018-11-30T18:46:31Z",
                        "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                        "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                        "repository": Object {
                          "externalSlug": "example/repo-name",
                          "id": "4",
                          "name": "example/repo-name",
                          "provider": "github",
                          "status": "active",
                          "url": "https://github.com/example/repo-name",
                        },
                      }
                    }
                    key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                  >
                    <CommitRow
                      className="css-zcxndt eyce8w27"
                      commit={
                        Object {
                          "author": Object {
                            "avatar": Object {
                              "avatarType": "letter_avatar",
                              "avatarUuid": null,
                            },
                            "avatarUrl": "https://example.com/avatar.png",
                            "dateJoined": "2018-02-26T23:57:43.766Z",
                            "email": "example@sentry.io",
                            "emails": Array [
                              Object {
                                "email": "example@sentry.io",
                                "id": "231605",
                                "is_verified": true,
                              },
                            ],
                            "has2fa": false,
                            "hasPasswordAuth": true,
                            "id": "224288",
                            "isActive": true,
                            "isManaged": false,
                            "isSuperuser": true,
                            "lastActive": "2018-11-30T21:25:15.222Z",
                            "lastLogin": "2018-11-30T21:18:09.812Z",
                            "name": "Foo Bar",
                            "username": "example@sentry.io",
                          },
                          "dateCreated": "2018-11-30T18:46:31Z",
                          "id": "f7f395d14b2fe29a4e253bf1d3094d61e6ad4434",
                          "message": "(improve) Add Links to Spike-Protection Email (#2408)

* (improve) Add Links to Spike-Protection Email

Users now have access to useful links from the blogs and docs on Spike-protection.

* fixed wording",
                          "repository": Object {
                            "externalSlug": "example/repo-name",
                            "id": "4",
                            "name": "example/repo-name",
                            "provider": "github",
                            "status": "active",
                            "url": "https://github.com/example/repo-name",
                          },
                        }
                      }
                    >
                      <PanelItem
                        className="css-zcxndt eyce8w27"
                        key="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                        p={2}
                      >
                        <div
                          className="eyce8w27 css-5fqmc7-PanelItem eo8n7lk0"
                        >
                          <AvatarWrapper>
                            <div
                              className="css-1h4eyme-AvatarWrapper eyce8w20"
                            >
                              <UserAvatar
                                gravatar={false}
                                size={36}
                                user={
                                  Object {
                                    "avatar": Object {
                                      "avatarType": "letter_avatar",
                                      "avatarUuid": null,
                                    },
                                    "avatarUrl": "https://example.com/avatar.png",
                                    "dateJoined": "2018-02-26T23:57:43.766Z",
                                    "email": "example@sentry.io",
                                    "emails": Array [
                                      Object {
                                        "email": "example@sentry.io",
                                        "id": "231605",
                                        "is_verified": true,
                                      },
                                    ],
                                    "has2fa": false,
                                    "hasPasswordAuth": true,
                                    "id": "224288",
                                    "isActive": true,
                                    "isManaged": false,
                                    "isSuperuser": true,
                                    "lastActive": "2018-11-30T21:25:15.222Z",
                                    "lastLogin": "2018-11-30T21:18:09.812Z",
                                    "name": "Foo Bar",
                                    "username": "example@sentry.io",
                                  }
                                }
                              >
                                <BaseAvatar
                                  gravatarId="example@sentry.io"
                                  hasTooltip={false}
                                  letterId="example@sentry.io"
                                  round={true}
                                  size={36}
                                  style={Object {}}
                                  title="Foo Bar"
                                  tooltip="Foo Bar (example@sentry.io)"
                                  type="letter_avatar"
                                  uploadId=""
                                  uploadPath="avatar"
                                >
                                  <Tooltip
                                    containerDisplayMode="inline-block"
                                    disabled={true}
                                    position="top"
                                    title="Foo Bar (example@sentry.io)"
                                  >
                                    <StyledBaseAvatar
                                      className="avatar"
                                      loaded={true}
                                      round={true}
                                      style={
                                        Object {
                                          "height": "36px",
                                          "width": "36px",
                                        }
                                      }
                                    >
                                      <span
                                        className="avatar css-1mqfg1n-StyledBaseAvatar e147uwb0"
                                        style={
                                          Object {
                                            "height": "36px",
                                            "width": "36px",
                                          }
                                        }
                                      >
                                        <LetterAvatar
                                          displayName="Foo Bar"
                                          identifier="example@sentry.io"
                                          round={true}
                                        >
                                          <Component
                                            className="css-z7ffmo-LetterAvatar e12lgfev0"
                                            displayName="Foo Bar"
                                            identifier="example@sentry.io"
                                            round={true}
                                          >
                                            <svg
                                              className="css-z7ffmo-LetterAvatar e12lgfev0"
                                              viewBox="0 0 120 120"
                                            >
                                              <rect
                                                fill="#847a8c"
                                                height="120"
                                                rx="15"
                                                ry="15"
                                                width="120"
                                                x="0"
                                                y="0"
                                              />
                                              <text
                                                fill="#FFFFFF"
                                                fontSize="65"
                                                style={
                                                  Object {
                                                    "dominantBaseline": "central",
                                                  }
                                                }
                                                textAnchor="middle"
                                                x="50%"
                                                y="50%"
                                              >
                                                FB
                                              </text>
                                            </svg>
                                          </Component>
                                        </LetterAvatar>
                                      </span>
                                    </StyledBaseAvatar>
                                  </Tooltip>
                                </BaseAvatar>
                              </UserAvatar>
                            </div>
                          </AvatarWrapper>
                          <CommitMessage>
                            <div
                              className="css-bjh831-CommitMessage eyce8w24"
                            >
                              <Message>
                                <div
                                  className="css-mw9uve-TextOverflow-Message eyce8w25"
                                >
                                  (improve) Add Links to Spike-Protection Email (#2408)
                                </div>
                              </Message>
                              <Meta>
                                <div
                                  className="css-1sv2dlr-TextOverflow-Meta eyce8w26"
                                >
                                  <span
                                    key="4"
                                  >
                                    <strong
                                      key="0"
                                    >
                                      Foo Bar
                                    </strong>
                                    <span
                                      key="1"
                                    >
                                       committed 
                                    </span>
                                    <TimeSince
                                      date="2018-11-30T18:46:31Z"
                                      key="2"
                                      suffix="ago"
                                    >
                                      <time
                                        date="2018-11-30T18:46:31Z"
                                        dateTime="2018-11-30T18:46:31.000Z"
                                        suffix="ago"
                                        title="November 30, 2018 6:46 PM UTC"
                                      >
                                        in a year
                                      </time>
                                    </TimeSince>
                                  </span>
                                </div>
                              </Meta>
                            </div>
                          </CommitMessage>
                          <div>
                            <CommitLink
                              commitId="f7f395d14b2fe29a4e253bf1d3094d61e6ad4434"
                              repository={
                                Object {
                                  "externalSlug": "example/repo-name",
                                  "id": "4",
                                  "name": "example/repo-name",
                                  "provider": "github",
                                  "status": "active",
                                  "url": "https://github.com/example/repo-name",
                                }
                              }
                            >
                              <span>
                                f7f395d
                              </span>
                            </CommitLink>
                          </div>
                        </div>
                      </PanelItem>
                    </CommitRow>
                  </Styled(CommitRow)>
                </div>
              </EmotionCssPropInternal>
            </PanelBody>
          </div>
        </Component>
      </Panel>
    </div>
  </ReleaseCommits>
</withApi(ReleaseCommits)>
`;
